# yew-fractals

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
assets/css/: styles.scss
crates/backend/: .gitignore  Cargo.toml
crates/backend/src/: main.rs
crates/frontend/: .gitignore  Cargo.toml  README.md  workspace.code-workspace
crates/frontend/src/agents/: command_msg_bus.rs
crates/frontend/src/components/: canvas_element.rs  control_panel.rs  edit_julia_cfg.rs
crates/frontend/src/work/: canvas.rs
crates/frontend/src/work/canvas/: clipboard_item.rs
crates/frontend/tmp/: discord_msg.md
src/: agents.rs  components.rs  lib.rs  main.rs  model.rs  work.rs
src/agents/: canvas_msg_bus.rs  clipboard_worker.rs  command_msg_bus.rs
src/components/: canvas_element.rs  control_panel.rs  disclaimer.rs  edit_color_cfg.rs  edit_julia_cfg.rs  edit_mandelbrot_cfg.rs  modal.rs  root.rs
src/components/modal/: modal_ok.rs  modal_plain.rs
src/work/: canvas.rs  colors.rs  complex.rs  fractal.rs  julia_set.rs  mandelbrot.rs  stats.rs  util.rs
src/work/complex/: complex_fp.rs  complex_rat.rs
src/work/fractal/: julia_set.rs  mandelbrot.rs
