[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"

description = "Fractal Explore based on the Yew Web Framework"
homepage = "https://tele-conference.de/yew-fractals"
repository = "https://github.com/samothx/yew-fractals/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew-agent = "0.1"
serde = "1.0.136"
serde_json = "1"
png_encode_mini = "0.1.2"
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4"
log = "0.4.6"
wasm-logger = "0.2.0"
js-sys = "0.3"
gloo-file = "0.2.1"
lazy_static = "1.4.0"
wasm-bindgen-test = "0.2"

[dependencies.katex]
version = "0.4"
default-features = false
features = ["wasm-js"]

[dependencies.yew]
version = "0.19"

[dependencies.gloo]
version = "0.6.1"

[dependencies.gloo-timers]
version = "0.2"

features=[ "futures"]

[dependencies.web-sys]
version = "0.3.56"
features=[ "Performance", "DomRect", "Element", "ImageData", "Navigator", "Permissions", "Clipboard",
    "PermissionStatus", "PermissionState", "Storage", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "HtmlSelectElement", "HtmlDivElement", "Touch", "TouchEvent", "TouchList", "ClipboardItem", "Screen",
    "MediaQueryList"]

[dev-dependencies]

