[package]
name = "yew-fractal-server"
version = "0.1.0"
edition = "2021"

description = "Server process for Fractal Explorer based on the Yew Web Framework"
homepage = "https://tele-conference.de/yew-fractals"
repository = "https://github.com/samothx/yew-fractals/"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4"
actix-files = "0.6"
log = "0.4.16"

[dependencies.structopt]
features = ["paw"]
version = "0.3"

[dependencies.mod_logger]
version = "0.8"

